# celonis-assignment

./: CMakeLists.txt  README.md
Buffer/: BufferManager.hpp
Client/: client.py  start_clients.sh
DataTypes/: PageData.hpp  RequestTypeEnum.hpp
KVManager/: KVManager.cpp  KVManager.hpp
Policy/: FIFOEvictionPolicy.hpp  RoundRobinEvictionPolicy.hpp  SimpleLinuxIoPolicy.hpp
Server/: ProxyServer.cpp  ProxyServer.hpp  Worker.cpp  Worker.hpp  main.cpp
